--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -477,6 +477,15 @@
     padding: 110px 0;
     background-color: $grey;
 }
+.products .products__item{
+    flex-basis: calc(25% - 30px);
+    margin-left: 30px;
+}
+.products__wrapper,
+.products-slider__wrapper{
+    max-width: 1920px;
+    margin: 0 auto;
+}
 .products__inner-btn {
     text-align: center;
     margin-bottom: 60px;
@@ -570,7 +579,8 @@
 }
 .products__inner-box {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    margin-left: -30px;
     flex-wrap: wrap;
 }
 .products__bottom-btn {
@@ -918,6 +928,396 @@
 
 // END INDEX PAGE
 
+//  START NEW-ITEMS PAGE
+
+.product-page__inner {
+    display: flex;
+    padding-bottom: 110px;
+}
+.product-page__aside {
+    margin-right: 30px;
+}
+.aside__item {
+    background-color: #fff;
+    border: 1px solid #dedede;
+    padding: 0px 32px 32px;
+    margin-bottom: 30px;
+    width: 270px;
+    word-wrap: break-word;
+}
+
+.aside__title {
+    border-bottom: 1px solid #dde3e8;
+    font-size: 20px;
+    color: $bg;
+    @include f700;
+    padding: 25px 0 20px;
+}
+.category__list {
+    padding-top: 10px;
+    li {
+        padding: 10px 0;
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        padding-left: 20px;
+
+        &::before {
+            content: "\f105";
+            position: absolute;
+            left: 0;
+            font-family: "icomoon";
+            font-size: 13px;
+            color: #8bc34a;
+        }
+    }
+    a {
+        color: $bg;
+    }
+    span {
+        color: #90a4ae;
+        margin-left: 10px;
+    }
+}
+
+.price-range {
+    form {
+        padding-top: 20px;
+    }
+    button {
+        margin-top: 55px;
+        padding: 16px 10px 16px;
+        background-color: $green;
+        text-align: center;
+        color: #fff;
+        @include f500;
+        width: 100%;
+        display: block;
+        border: none;
+        cursor: pointer;
+        position: relative;
+        &::before {
+            content: "\f002";
+            position: absolute;
+            left: 58px;
+            top: 15px;
+            font-family: "icomoon";
+            font-size: 15px;
+            color: #fff;
+        }
+    }
+}
+
+.irs-max,
+.irs-min {
+    display: none;
+}
+
+.irs--flat .irs-line {
+    background-color: #f2f5f8;
+    height: 5px;
+}
+
+.irs--flat .irs-bar {
+    background-color: #37474f;
+    height: 5px;
+}
+
+.irs--flat .irs-handle {
+    width: 16px;
+    height: 16px;
+    border: 4px solid $green;
+    background-color: #fff;
+    border-radius: 50%;
+    top: 19px;
+
+    i:first-child {
+        display: none;
+    }
+}
+
+.irs-from,
+.irs-single,
+.irs-to {
+    top: 45px;
+}
+
+.irs--flat .irs-from:before,
+.irs--flat .irs-single:before,
+.irs--flat .irs-to:before {
+    display: none;
+}
+
+.irs--flat .irs-from,
+.irs--flat .irs-single,
+.irs--flat .irs-to {
+    color: #8197a3;
+    background-color: transparent;
+    font-size: 15px;
+    padding: 0;
+    line-height: 1.333;
+    text-shadow: none;
+    border-radius: 4px;
+}
+
+.product-page__aside {
+    .products__item {
+        .products__item-img {
+            min-height: 120px;
+            float: none;
+            width: 208px;
+        }
+    }
+    .products__item {
+        box-shadow: none;
+
+        &-price {
+            font-size: 16px;
+        }
+    }
+
+    .products__item-content {
+        padding: 25px 0px;
+        min-height: 75px;
+        border-bottom: none;
+    }
+    .products__item-info {
+        padding: 0;
+        min-height: 0;
+    }
+    .products__item-title {
+        font-size: 16px;
+    }
+    .products__item-starnum {
+        display: none;
+    }
+    .rate-star {
+        margin-right: 0;
+    }
+    .products__item-author .avatar {
+        margin-right: 9px;
+    }
+    .jq-ry-container {
+        padding: 0;
+    }
+    .products__item {
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+        border-bottom: 1px solid #dde3e8;
+    }
+    .aside__product-item {
+        .products__item:last-child {
+            border: none;
+            padding-bottom: 0;
+        }
+        .products__item:first-child {
+            margin-top: 25px;
+        }
+    }
+
+    .top-sallers__link {
+        margin-top: 43px;
+        padding: 16px 10px;
+        background-color: $green;
+        text-align: center;
+        color: #fff;
+        @include f500;
+        display: block;
+    }
+}
+
+.product-page__filter {
+    background-color: #fff;
+    border: 1px solid #dedede;
+    padding: 0px 20px;
+    margin-bottom: 30px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    // word-wrap: break-word;
+    button {
+        cursor: pointer;
+        background-color: transparent;
+        font-size: 16px;
+        border: none;
+        color: #90a4ae;
+        outline: none;
+        &.active {
+            color: $green;
+        }
+    }
+
+    .product-page__filter-sort {
+        color: #707070;
+        font-size: 14px;
+        display: flex;
+        align-items: center;
+    }
+    .icon-sort-amount-desc{
+        font-size: 18px;
+        color: #455a64;
+        padding-right: 13px;
+
+    }
+    .icon-unsorted {
+        font-size: 14px;
+        color: #707070;
+        padding-left: 7px;
+    }
+}
+.product-page__content {
+    width: 100%;
+}
+.product-page__content {
+    .products__item {
+        flex-basis: calc(33.3333% - 30px);
+        background-color: #fff;
+        transition: all 0.5s;
+        margin-left: 30px;
+
+        &-img {
+            min-height: 180px;
+        }
+        &-content {
+            padding: 25px 20px;
+        }
+        &-title {
+            font-size: 16px;
+        }
+        &-info {
+            height: 65px;
+            padding: 10px 23px;
+        }
+    }
+    .rate-star {
+        margin-right: 5px;
+    }
+    .jq-ry-container {
+        padding: 0;
+    }
+    .products__item-author .avatar {
+        margin-right: 5px;
+    }
+}
+.product-page__items {
+    display: flex;
+    justify-content: start;
+    margin-bottom: 30px;
+    flex-wrap: wrap;
+    margin-left: -30px;
+}
+
+.pagination__list {
+    li {
+        display: inline-block;
+        & + li {
+            margin-left: 8px;
+        }
+        a,
+        span {
+            box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+            width: 40px;
+            height: 38px;
+            background-color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 16px;
+            color: $bg;
+            @include f500;
+            &.active {
+                background-color: $red;
+                color: #fff;
+            }
+        }
+    }
+}
+.product__item-text {
+    display: none;
+}
+.products__item-price {
+    span {
+        display: none;
+    }
+}
+.product__item-list {
+    display: none;
+}
+.products__item {
+    &.list {
+        max-width: 100%;
+        flex-basis: 100%;
+        .products__item-img {
+            width: 240px;
+            float: left;
+            min-height: 100%;
+        }
+        .product__item-text {
+            display: block;
+            margin-top: 11px;
+            margin-bottom: 5px;
+            font-size: 14px;
+            color: #7a8b95;
+        }
+        .products__item-price {
+            font-size: 30px;
+
+            span {
+                display: block;
+                color: #aeb4bb;
+                font-size: 13px;
+                margin-top: 30px;
+            }
+        }
+        .products__item-name {
+            max-width: 480px;
+        }
+
+        .products__item-content {
+            height: 100px;
+            margin-top: 15px;
+        }
+        .product__item-list {
+            display: block;
+            .icon-comment-o,
+            .icon-heart-o {
+                display: inline-block;
+                font-size: 12px;
+                color: #b0bec5;
+                padding-left: 50px;
+                border-left: 1px solid #aeb4bb;
+                position: relative;
+                &::before {
+                    position: absolute;
+                    font-size: 16px;
+                    left: 15px;
+                    color: $green;
+                    top: 0px;
+                }
+
+                span {
+                    color: $bg;
+                    @include f500;
+                }
+            }
+            .icon-comment-o {
+                padding-right: 25px;
+                &::before {
+                    top: -3px;
+                }
+            }
+        }
+
+        .products__item-star {
+            margin-left: auto;
+            margin-right: 30px;
+        }
+    }
+}
+
+// END NEW-ITEMS PAGE
+
 // START PRODUCT-DETAILS PAGE
 
 .product-one {
@@ -936,7 +1336,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 16px 0;
+    padding: 16px;
 }
 .product-one__images {
     max-width: 829px;
@@ -1519,7 +1919,7 @@
         color: #707070;
     }
 }
-.setting__line .jq-selectbox{
+.setting__line .jq-selectbox {
     max-width: 540px;
 }
 //  END SETTINGS
@@ -1851,7 +2251,6 @@
 
 //  END UPLOAD
 
-
 //START WITHDRAWALS
 .withdrawals__inner {
     display: flex;
@@ -1982,396 +2381,43 @@
         color: #444;
     }
 }
-.withdrawals__content-items{
+.withdrawals__content-items {
     padding-bottom: 35px;
 }
-.withdrawals__content-item{
-    display:flex;
+.withdrawals__content-item {
+    display: flex;
     height: 42px;
     align-items: center;
     font-size: 13px;
-    color:#444;
-    &:nth-child(odd){
+    color: #444;
+    &:nth-child(odd) {
         background-color: #f9f9f9;
     }
 }
-.withdrawals__contens-date{
+.withdrawals__contens-date {
     width: 154px;
     padding-left: 20px;
     @include f500;
 }
-.withdrawals__contens-email{
+.withdrawals__contens-email {
     width: 180px;
     @include f500;
 }
-.withdrawals__contens-price{
+.withdrawals__contens-price {
     width: 70px;
     @include f700;
 }
-.withdrawals__contens-status{
+.withdrawals__contens-status {
     width: 80px;
     @include f700;
-    &.withdrawals__contens-paid{
-        color:$green;
+    &.withdrawals__contens-paid {
+        color: $green;
     }
-
 }
 //END WITHDRAWALS
 
-
-//  START NEW-ITEMS PAGE
-.product-page__inner {
-    display: flex;
-    padding-bottom: 110px;
-}
-.product-page__aside {
-    margin-right: 30px;
-}
-.aside__item {
-    background-color: #fff;
-    border: 1px solid #dedede;
-    padding: 0px 32px 32px;
-    margin-bottom: 30px;
-    width: 270px;
-}
-.aside__title {
-    border-bottom: 1px solid #dde3e8;
-    font-size: 20px;
-    color: $bg;
-    padding: 22px 0px 19px;
-    @include f700;
-}
-.category__list {
-    padding-top: 10px;
-    li {
-        padding: 10px 0;
-        display: flex;
-        justify-content: space-between;
-        position: relative;
-        padding-left: 20px;
-        &::before {
-            content: "\f105";
-            color: #8bc34a;
-            position: absolute;
-            left: 0;
-            font-size: 18px;
-            font-family: "icomoon";
-        }
-    }
-    a {
-        color: $bg;
-    }
-    span {
-        color: #90a4ae;
-        margin-left: 10px;
-    }
-}
-.price-range {
-    form {
-        padding-top: 20px;
-    }
-    button {
-        margin-top: 55px;
-        padding: 16px 10px;
-        background-color: $green;
-        text-align: center;
-        color: #fff;
-        @include f500;
-        width: 100%;
-        display: block;
-        border: none;
-        cursor: pointer;
-        position: relative;
-        &::before {
-            content: "\f002";
-            color: #fff;
-            position: absolute;
-            left: 58px;
-            top: 15px;
-            font-size: 15px;
-            font-family: "icomoon";
-        }
-    }
-}
-.irs-min,
-.irs-max {
-    display: none;
-}
-.irs--flat .irs-line {
-    background-color: #f2f5f8;
-    height: 5px;
-}
-.irs--flat .irs-bar {
-    background-color: $bg;
-    height: 5px;
-}
-.irs--flat .irs-handle {
-    width: 16px;
-    height: 16px;
-    border: 4px solid $green;
-    background-color: #fff;
-    border-radius: 50%;
-}
-.irs--flat .irs-handle > i:first-child {
-    display: none;
-}
-.irs-from,
-.irs-single,
-.irs-to {
-    top: 45px;
-}
-.irs--flat .irs-from:before,
-.irs--flat .irs-single:before,
-.irs--flat .irs-to:before {
-    display: none;
-}
-.irs--flat .irs-from,
-.irs--flat .irs-single,
-.irs--flat .irs-to {
-    color: #78909c;
-    font-size: 15px;
-    line-height: 1.333;
-    text-shadow: none;
-    padding: 0;
-    background-color: transparent;
-    border-radius: 0px;
-}
-.irs--flat .irs-handle {
-    top: 19px;
-}
-.product-page__aside {
-    .product__item-img {
-        min-height: 120px;
-    }
-    .product__item {
-        box-shadow: none;
-    }
-    .product__item-content {
-        padding: 0;
-        min-height: 75px;
-        border-bottom: none;
-    }
-    .product__item-info {
-        padding: 0;
-        min-height: 0;
-    }
-    .product__item-title {
-        font-size: 16px;
-    }
-    .product__item-price {
-        font-size: 16px;
-    }
-    .product__item-starnum {
-        display: none;
-    }
-    .rate-star {
-        margin-right: 0;
-    }
-    .product__item-author .avatar {
-        margin-right: 9px;
-    }
-    .jq-ry-container {
-        padding: 0;
-    }
-    .product__item {
-        padding-bottom: 30px;
-        margin-bottom: 30px;
-        border-bottom: 1px solid #dde3e8;
-    }
-}
-.aside__product-item {
-    .product__item:last-child {
-        border: none;
-        padding-bottom: 0;
-    }
-    .product__item:first-child {
-        margin-top: 25px;
-    }
-}
-.top-sellers__link {
-    padding: 16px 10px;
-    display: block;
-    background-color: $green;
-    color: #fff;
-    @include f500;
-    text-align: center;
-}
-
-.product-page__filter {
-    background-color: #fff;
-    border: 1px solid #dedede;
-    padding: 0px 20px;
-    margin-bottom: 30px;
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    button {
-        cursor: pointer;
-        background-color: transparent;
-        border: none;
-        font-size: 16px;
-        color: #90a4ae;
-        outline: none;
-        &.active {
-            color: $green;
-        }
-    }
-}
-.product-page__filter-sort {
-    color: #707070;
-    font-size: 14px;
-    display: flex;
-    align-items: center;
-}
-button.icon-sort-amount-desc {
-    font-size: 18px;
-    color: #455a64;
-}
-button.icon-unsorted {
-    font-size: 14px;
-    color: #707070;
-}
-.product-page__content {
-    width: 100%;
-}
-.product-page__content {
-    .product__item {
-        flex-basis: calc(33.3333% - 30px);
-        background-color: #fff;
-        transition: all 0.5s;
-        margin-left: 30px;
-    }
-    .product__item-img {
-        min-height: 180px;
-    }
-    .product__item-content {
-        padding: 10px 20px;
-    }
-    .product__item-title {
-        font-size: 16px;
-    }
-    .product__item-info {
-        min-height: 65px;
-        padding: 10px 20px;
-    }
-    .rate-star {
-        margin-right: 5px;
-    }
-    .jq-ry-container {
-        padding: 0;
-    }
-}
-.product-page__items {
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    margin-bottom: 30px;
-    margin-left: -30px;
-}
-.pagination__list {
-    li {
-        display: inline-block;
-        & + li {
-            margin-left: 6px;
-        }
-    }
-    a,
-    span {
-        box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
-        width: 43px;
-        height: 38px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #fff;
-        font-size: 16px;
-        color: $bg;
-        @include f500;
-        &.active {
-            background-color: $red;
-            color: #fff;
-        }
-    }
-}
-.product__item-text {
-    display: none;
-}
-.product__item-price {
-    span {
-        display: none;
-    }
-}
-.product__item-list {
-    display: none;
-    .icon-comment-o,
-    .icon-heart-o {
-        display: inline-block;
-        font-size: 12px;
-        color: #70838d;
-        padding-left: 50px;
-        border-left: 1px solid #aeb4bb;
-        position: relative;
-        span {
-            @include f500;
-            color: $bg;
-        }
-        &::before {
-            font-size: 16px;
-            color: $green;
-            position: absolute;
-            left: 20px;
-            top: 0;
-        }
-    }
-    .icon-comment-o {
-        padding-right: 30px;
-        &::before {
-            top: -2px;
-        }
-    }
-}
-.product__item {
-    &.list {
-        max-width: 100%;
-        flex-basis: 100%;
-        .product__item-img {
-            width: 240px;
-            float: left;
-            min-height: 100%;
-        }
-        .product__item-text {
-            display: block;
-            font-size: 14px;
-            color: #70838d;
-            margin-top: 15px;
-            margin-bottom: 5px;
-        }
-        .product__item-price {
-            font-size: 30px;
-            span {
-                display: block;
-                font-size: 13px;
-                color: #aeb4bb;
-                margin-top: 30px;
-            }
-        }
-        .product__item-name {
-            max-width: 480px;
-        }
-        .product__item-content {
-            padding-top: 23px;
-        }
-        .product__item-list {
-            display: block;
-        }
-        .product__item-star {
-            margin-left: auto;
-            margin-right: 30px;
-        }
-    }
-}
-
-// END NEW-ITEMS PAGE
-
 @import "media";
+@import "media-product-details.scss";
+@import "media-new-items.scss";
+@import "media-index.scss";
+
